# pacute-bench

./: .env.example  .gitignore  CLAUDE.md  README.md  human-baselines.MD  pacute_dataset.xlsx  pyproject.toml  requirements.txt
configs/: evaluation.yaml  models_commercial.yaml  models_it.yaml  models_pt.yaml
data/benchmarks/: affixation_gen.jsonl  affixation_mcq.jsonl  composition_gen.jsonl  composition_mcq.jsonl  cute_gen.jsonl  hierarchical_gen.jsonl  hierarchical_mcq.jsonl  langgame_gen.jsonl  langgame_mcq.jsonl  manipulation_gen.jsonl  manipulation_mcq.jsonl  morphological_extraction_gen.jsonl  morphological_extraction_mcq.jsonl  morphological_production_gen.jsonl  morphological_production_mcq.jsonl  multi_digit_addition_gen.jsonl  multi_digit_addition_mcq.jsonl  syllabification_gen.jsonl  syllabification_mcq.jsonl
results/: compile_results.ipynb  evaluation_results_20260520_124935.json  evaluation_results_20260520_130422.json  evaluation_results_20260520_135302.json  evaluation_results_20260520_151037.json  evaluation_results_20260520_205410.json  evaluation_results_20260520_215820.json  evaluation_results_20260521_125521.json  evaluation_results_20260521_132941.json  evaluation_results_20260521_180016.json  evaluation_results_20260521_190255.json  evaluation_results_20260522_101435.json  evaluation_results_20260522_102122.json  evaluation_results_20260522_102537.json
scripts/: eval_commercial.pbs  eval_commercial.slurm  eval_model.pbs  eval_model.slurm  generate_annotation_sheets.py  rescore_from_inference.py  run_all_commercial.sh  run_commercial_wave2.sh  run_commercial_wave3.sh  sample_human_baseline.py  score_human_baselines.py  setup_env.slurm  submit_evaluations.sh  submit_evaluations_slurm.sh
tables/: compile_results.ipynb  compile_results.py  results_commercial.tex  results_it.tex  results_pt.tex  results_unknown.tex
(+1778 files in other folders)
